# sentinel2

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.MD  CONTRIBUTING.MD  README.md  environment.yml  mypy.ini  pyproject.toml  requirements-dev.txt  setup.cfg
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: continuous-integration.yml  release.yml
docker/: Dockerfile  Dockerfile-dev  build  cibuild  console  docs-server  format  notebook  stac  test
examples/: c1-l1c-files.txt  c2-l2a-files.txt  catalog.json  collection.json
examples/sentinel2-l1c-example/: collection.json
examples/sentinel2-l1c-example/S2A_MSIL1C_20200717T221941_R029_T01LAC_20200717T234135/: S2A_MSIL1C_20200717T221941_R029_T01LAC_20200717T234135.json
examples/sentinel2-l1c-example/S2A_T01LAC_20200717T221944_L1C/: S2A_T01LAC_20200717T221944_L1C.json
examples/sentinel2-l2a-example/: collection.json
examples/sentinel2-l2a-example/S2A_MSIL2A_20190212T192651_R013_T07HFE_20201007T160857/: S2A_MSIL2A_20190212T192651_R013_T07HFE_20201007T160857.json
examples/sentinel2-l2a-example/S2A_T07HFE_20190212T192646_L2A/: S2A_T07HFE_20190212T192646_L2A.json
examples/sentinel2c1l1/: collection.json
examples/sentinel2c1l1/S2A_MSIL1C_20210908T042701_R133_T46RER_20210908T070248/: S2A_MSIL1C_20210908T042701_R133_T46RER_20210908T070248.json
examples/sentinel2c2l2a/: collection.json
examples/sentinel2c2l2a/S2B_MSIL2A_20191228T210519_R071_T01CCV_20201003T104658/: S2B_MSIL2A_20191228T210519_R071_T01CCV_20201003T104658.json
scripts/: create_examples.py  create_expected.py  format  publish  test  update
src/stactools/sentinel2/: __init__.py  cog.py  commands.py  constants.py  granule_metadata.py  grid.py  mgrs.py  product_metadata.py  safe_manifest.py  stac.py  tileinfo_metadata.py  utils.py
src/stactools/sentinel2/fragments/: README.md  (+1 more)
tests/: conftest.py  test_antimeridian.py  test_commands.py  test_metadata.py  test_stac.py
tests/data-files/S2A_MSIL1C_20200717T221941_R029_T01LAC_20200717T234135.SAFE/: INSPIRE.xml  MTD_MSIL1C.xml  expected_output.json  manifest.safe
tests/data-files/S2A_MSIL1C_20210908T042701_N0301_R133_T46RER_20210908T070248.SAFE/: INSPIRE.xml  MTD_MSIL1C.xml  expected_output.json  manifest.safe
tests/data-files/S2A_MSIL2A_20180721T053721_N0212_R062_T43MDV_20201011T181419.SAFE/: MTD_MSIL2a.xml
tests/data-files/S2A_MSIL2A_20190212T192651_N0212_R013_T07HFE_20201007T160857.SAFE/: expected_output.json
tests/data-files/S2A_MSIL2A_20221005T115411_N0400_R023_T29UNU_20221005T164454.SAFE/: INSPIRE.xml  MTD_MSIL2A.xml  manifest.safe
tests/data-files/S2A_MSIL2A_20230625T234621_N0509_R073_T01WCP_20230626T022157.SAFE/: INSPIRE.xml  MTD_MSIL2A.xml  expected_output.json  manifest.safe
tests/data-files/S2A_MSIL2A_20230625T234621_N0509_R073_T01WCP_20230626T022158.SAFE/: MTD_MSIL2A.xml  expected_output.json
tests/data-files/S2A_MSIL2A_20230625T234621_N0509_R073_T01WCS_20230626T022157.SAFE/: MTD_MSIL2A.xml  MTD_TL.xml  expected_output.json  manifest.safe
tests/data-files/S2A_MSIL2A_20230821T221941_N0509_R029_T01KAB_20230822T021825.SAFE/: MTD_MSIL2A.xml  expected_output.json  manifest.safe
tests/data-files/S2A_OPER_MSI_L1C_TL_SGS__20181231T203637_A018414_T10SDG/: expected_output.json  metadata.xml  tileInfo.json
tests/data-files/S2A_OPER_MSI_L2A_DS_2APS_20230105T201055_S20230105T163809/: metadata.xml  tileInfo.json
tests/data-files/S2A_OPER_MSI_L2A_TL_2APS_20240108T121951_A044635_T34VEL/: expected_output.json  metadata.xml  tileInfo.json
tests/data-files/S2A_OPER_MSI_L2A_TL_SGS__20181231T210250_A018414_T10SDG/: expected_output.json  metadata.xml  tileInfo.json
tests/data-files/S2A_OPER_MSI_L2A_TL_VGS1_20220401T110010_A035382_T34LBP/: expected_output.json  metadata.xml  tileInfo.json
(+154 files in other folders)
