[project]
name = "stactools-sentinel2"
dynamic = ["version", "readme"]
description = "Create STAC Items from Sentinel-2 metadata"
authors = [{ "name" = "stac-utils", "email" = "stac@radiant.earth"}]
keywords = [ "stactools", "pystac", "catalog", "STAC" ]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"

dependencies = [
    "antimeridian >= 0.3.5",
    "shapely >= 2.0.0",
    "stactools >= 0.5.2",
    "pyproj >= 3.5.0",
    "pystac >= 1.9.0",
]

[project.optional-dependencies]
dev = [
  "codespell",
  "coverage",
  "pre-commit",
  "ruff",
  "pytest",
  "pytest-cov",
  "requests",
  "pystac>1.12",
]

[project.urls]
Url = "https://github.com/stactools-sentinel2/stactools-sentinel2"
Issues = "https://github.com/stactools-sentinel2s/stactools-sentinel2/issues"
Github = "https://github.com/stactools-sentinel2s/stactools-sentinel2"
CHANGELOG = "https://github.com/stactools-sentinel2s/stactools-sentinel2/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = {attr = "stactools.sentinel2.__version__" }
readme = {file = ["README.md"], content-type = "text/plain"}

[tool.setuptools]
package-dir = { "" = "src" }

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

# pyproject.toml
[tool.pytest.ini_options]
filterwarnings = ["error", "ignore::antimeridian.FixWindingWarning"]
