[metadata]
name = stactools-sentinel2
version = attr: stactools.sentinel2.__version__
description = PROVIDE DESCRIPTION HERE
long_description = file: README.md
long_description_content_type = text/markdown
author = stac-utils
author_email = stac@radiant.earth
url = https://github.com/stactools-sentinel2s/stactools-sentinel2
project_urls =
    Documentation = https://stactools-sentinel2.readthedocs.io/en/latest/
    Issues = https://github.com/stactools-sentinel2s/stactools-sentinel2/issues
keywords =
    stactools
    pystac
    catalog
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools == 0.3.1

[options.packages.find]
where = src
