[metadata]
name = stactools-sentinel2
version = attr: stactools.sentinel2.__version__
description = Create STAC Items from Sentinel-2 metadata
long_description = file: README.md
long_description_content_type = text/markdown
author = stac-utils
author_email = stac@radiant.earth
url = https://github.com/stactools-sentinel2/stactools-sentinel2
project_urls =
    Issues = https://github.com/stactools-sentinel2s/stactools-sentinel2/issues
keywords =
    stactools
    pystac
    catalog
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.9
package_dir =
    = src
packages = find_namespace:
install_requires =
    antimeridian >= 0.3.3
    stactools >= 0.5.2
    pystac >= 1.9.0

[options.packages.find]
where = src
